2010-08-15	Victor Mataré
		* message.h, message.c, config.c, system.c, thinkfan.c: Rewrite
		messaging and logging functionality.

2010-06-25	Victor Mataré
		* config.c: Error if first LOWER limit > 0.

2010-06-14	Victor Mataré
		* config.c: Add check for overlapping fan levels.
		* message.h: Add error message.

2010-05-13	Victor Mataré
		* parser.c: Make int parsing cheaper.
		* system.c: Remove duplicate set_fan.
		* thinkfan.c: Reorder and try to fail early.

2010-04-02	Victor Mataré
		* config.c: Fix another memory leak
		* NOTES, thinkfan.conf.sysfs, thinkfan.conf.thinkpad, README: some
		minor corrections and clarifications.
		* thinkfan-0.7: kind-of release

2010-03-25	Victor Mataré
		* config.c: Put the check for level ordering back in place.
		* thinkfan.c: Finally fix the watchdog's border conditions
		* NOTES: rename to NEWS

2010-03-21	Victor Mataré
		* thinkfan.c: Tweak watchdog handling to deal with border conditions.

2010-02-28	Victor Mataré
		* parser.h, parser.c: This is the new config parser. It extends the
		config syntax to allow specifying correction values for all sensors.
		* config.c: Major rewrite to use new parser instead of sscanf.
		* system.c: Use the new parser for reading the temperatures from
		/proc/acpi/ibm/thermal, fix some memory leaks.
		* message.h: Remove some redundant messaging, add new messages for new
		error conditions.
		* globaldefs.h: Redesign struct tf_config to accomodate new
		functionality, add global buffer to reduce cyclic malloc()ing.
		* thinkfan.c: Minor changes for consistency.
		* README: Update to explain sensor correction values.
		* NOTES: New file. Explain important changes in v0.7.

2009-11-21	Victor Mataré
		* README: Reduce burble, update to reflect new behaviour
		* thinkfan.conf.example: Split into thinkfan.conf.sysfs and
		thinkfan.conf.thinkpad.
		* thinkfan.c: Remove DEBUG flag. Instead print fan speed debug
		messages when not in quiet mode and running in the foreground.