@@ -1,10 +1,20 @@
 /***************************************************************
- * thinkfan version 0.7.1 -- copyleft 6-2010, Victor Mataré    *
+ * thinkfan version 0.7.2 -- copyleft 7-2011, Victor Mataré    *
  ***************************************************************/
 
- This program is provided to you AS-IS. It is licensed under a Creative Commons
- Attribution-Share Alike 3.0 United States License. See
- http://creativecommons.org/licenses/by-sa/3.0/us/ for details.
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
 
  A simple, lightweight fan control program. Originally designed specifically
  for IBM/Lenovo Thinkpads, it now supports any kind of system via the sysfs
