@@ -1,19 +1,21 @@
 /********************************************************************
  * system.c: Anything that interfaces with the operating system
  *
- * This work is licensed under a Creative Commons Attribution-Share Alike 3.0
- * United States License. See http://creativecommons.org/licenses/by-sa/3.0/us/
- * for details.
- *
- * This file contains all functions that are specific to dealing with
- * either /sys/class/hwmon or the /proc/acpi/ibm interface. They are
- * referenced in the main program via function pointers.
- *
- * This file is part of thinkfan. See thinkfan.c for further info.
- *
- * I know there's a lot of code redundancy in here, but that's expected
- * to save us some memory access in the main loop.
- * ******************************************************************/
+ * This file is part of thinkfan.
+
+ * thinkfan is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+
+ * thinkfan is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+
+ * You should have received a copy of the GNU General Public License
+ * along with thinkfan.  If not, see <http://www.gnu.org/licenses/>.
+ ********************************************************************/
 #include "globaldefs.h"
 #include <unistd.h>
 #include <stdio.h>
