@@ -1,3 +1,7 @@
+2011-07-16	Victor Mataré
+		* thinkfan-0.7.2: Switch to GPLv3, release.
+		* system.c: Don't cut buffer to length 8 in setfan_ibm().
+
 2010-08-15	Victor Mataré
 		* message.h, message.c, config.c, system.c, thinkfan.c: Rewrite
 		messaging and logging functionality.
